# gymapp

./: .env.example  .gitignore  BACKUP.md  CLAUDE.md  CONTENT.md  DEPLOY.md  DEV.md  FEEDBACK-LOG-ARCHIVE.md  FEEDBACK-LOG.md  GYM_API.md  README.md  REGRESSION.md  RESTORE.md  SPEC.md  TESTING.md  Terry Laughlin_ John Delves - Total Immersion_ The Revolutionary Way To Swim Better, Faster, and Easier (2004, Touchstone) - libgen.li.epub  UX-BACKLOG.md  content-manifest.csv  content-manifest.json  docker-compose.staging.yml  docker-compose.yml  gym-exercise-index.json  index.html  package-lock.json  package.json  scraper.py  video-manifest.csv  video-manifest.json  vite.config.ts
coach-engine-src/: .gitattributes  .gitignore  AGENTS.md  AUDIT.md  COACH_REVIEW.md  README.md  coach.env.example  coach_system.md  instructions.md  pyproject.toml
coach-engine-src/archive/: instructions.original.md  repo_cleanup.executed.sh
coach-engine-src/codex_coach/: README.md  activity_recovery_trace.md  athlete_profile.md  book_manifest.md  centr_mapping.md  centr_recommendations.md  coach_action_feedback.md  coach_feedback_format.md  coach_feedback_memory.md  codex_coach_plan.md  cookbook.md  data_sources.md  example_threshold_4x8_controlled.json  example_week_plan.json  exercise_library.md  feedback_log.md  feedback_protocol.md  ftp_estimate.md  functional_training_boyle_source_notes.md  good_for_a_girl_source_notes.md  gym_execution_options.md  instructions_female_athlete.md  instructions_fitness_estimation.md  instructions_health_and_peaking.md  instructions_intervals_icu.md  (+22 more)
(+519 files in other folders)
